2007-02-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/port_expert.dox: started documenting some of the 
	deeper port stuff.

	* CMakeLists.txt: added simple (unix-only) "dox" target for
	doxygen documentation.

2007-02-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCoreInputUnit.cpp,PortCoreOutputUnit.cpp:
	Francesco Nori reported a problem that was caused by the 
	change on 2007-01-26 that adds information about whether replies
	are expected to a message.  In some configurations this change
	was not compatible with communicating with older YARP processes.
	Should be fixed now.

2007-02-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* configure.ac: added core libYARP_dev library to autoconf build,
	along with the yarpdev program.

2007-02-06 Lorenzo Natale <nat@liralab.it>

	* src/libYARP_dev/src/dragonfly/winnt/yarp/DragonflyDeviceDriver.cpp:
	corrected erratic behavior on setGain/setShutter/setBrightness and
	corresponding getters.
	
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h: 
	added getWhiteBalanceMethod to IFrameGrabberControl and changes
	propagated to the following files -	
	- src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	- src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	- src/libYARP_dev/src/dragonfly/winnt/yarp/DragonflyDeviceDriver.cpp
	- src/libYARP_dev/src/dragonfly/common/yarp/DragonflyDeviceDriver.h

2007-02-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/Makefile.am: ran
	./scripts/update-automake to freshen files needed for
	the "autoconf/automake" method of compiling YARP.  
	This still just builds the libYARP_OS and libYARP_sig
	libraries.

2007-02-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/end_pack_for_net.h: add support
	for Intel Mac OS/X.  This file needs to be cleaned up a bit.

	* src/libYARP_OS/src/Companion.cpp: Assif spotted that when a port