@@ -8,7 +8,7 @@ if [ "k$WEB_USER" = "k" ] ; then
 fi
 echo USER is "$WEB_USER"
 
-CMAKEOPTS="-DCREATE_GUIS:BOOL=TRUE -DCREATE_DEVICE_LIBRARY_BUILTINS:BOOL=TRUE -DCREATE_DEVICE_TESTS:BOOL=TRUE -DENABLE_XSensMTx:BOOL=TRUE -DENABLE_dragonfly:BOOL=TRUE -DENABLE_ffmpeg:BOOL=TRUE -DENABLE_opencv_grabber:BOOL=TRUE -DENABLE_portaudio:BOOL=TRUE -DENABLE_microphone:BOOL=TRUE -DENABLE_esdMotionControl=TRUE"
+CMAKEOPTS="-DCREATE_GUIS:BOOL=TRUE -DCREATE_DEVICE_LIBRARY_BUILTINS:BOOL=TRUE -DCREATE_BUILTIN_DEVICE_TESTS:BOOL=TRUE -DENABLE_XSensMTx:BOOL=TRUE -DENABLE_dragonfly:BOOL=TRUE -DENABLE_ffmpeg:BOOL=TRUE -DENABLE_opencv_grabber:BOOL=TRUE -DENABLE_portaudio:BOOL=TRUE -DENABLE_microphone:BOOL=TRUE -DENABLE_esdMotionControl=TRUE"
 
 export YARP_ROOT=$PWD
 
