@@ -1,0 +1,51 @@
+// -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
+
+/*
+ * Copyright (C) 2006 Paul Fitzpatrick
+ * CopyPolicy: Released under the terms of the GNU GPL v2.0.
+ *
+ */
+
+#include <yarp/String.h>
+#include <yarp/dev/PolyDriver.h>
+#include <yarp/dev/FrameGrabberInterfaces.h>
+
+#include "TestList.h"
+
+using namespace yarp::os;
+using namespace yarp::sig;
+using namespace yarp::dev;
+
+class PolyDriverTest : public yarp::UnitTest {
+public:
+    virtual yarp::String getName() { return "PolyDriverTest"; }
+
+    void testBasic() {
+        report(0,"a very basic driver instantiation test");
+        PolyDriver dd;
+        Property p;
+        p.put("device","test_grabber");
+        bool result;
+        result = dd.open(p);
+        checkTrue(result,"open reported successful");
+        IFrameGrabberImage *grabber = NULL;
+        result = dd.view(grabber);
+        checkTrue(result,"interface reported");
+        ImageOf<PixelRgb> img;
+        grabber->getImage(img);
+        checkTrue(img.width()>0,"interface seems functional");
+        result = dd.close();
+        checkTrue(result,"close reported successful");
+    }
+
+    virtual void runTests() {
+        testBasic();
+    }
+};
+
+static PolyDriverTest thePolyDriverTest;
+
+yarp::UnitTest& getPolyDriverTest() {
+    return thePolyDriverTest;
+}
+
